# busyncr

./: AGENTS.md  AGENT_NEXT_DEV_SESSION_HANDOFF.md  CHANGELOG.md  Cargo.toml  FR-C1.md  FR-K1.md  FR-Q1.md  PRD.md  README.md  ROADMAP.md  SLICES.md
.github/workflows/: ci.yml  release.yml
crates/busyncr-client/: Cargo.toml
crates/busyncr-client/src/: backup.rs  bench_cmd.rs  config.rs  enroll.rs  keys.rs  lib.rs  main.rs  progress.rs  restore.rs  run.rs  service.rs  snapshots.rs  status.rs
crates/busyncr-client/src/service/: eventlog.rs
crates/busyncr-client/tests/: acceptance.rs  fr10_bench_chunking_cli.rs  fr1_enrollment.rs  fr2_fr3_backup.rs  fr4_fr9_restore.rs  fr5_retention_e2e.rs  fr6_migration.rs  fr8_scheduler_restart.rs  frc2_frc7_compression_pipeline.rs  frc5_bench_compression.rs  frk1_keyed_identity.rs  frm1_monitoring.rs
crates/busyncr-core/: Cargo.toml
crates/busyncr-core/src/: bench.rs  chunking.rs  compression.rs  crypto.rs  index.rs  lib.rs  manifest.rs  policy_bench.rs  retention.rs  scheduler.rs
crates/busyncr-daemon/: Cargo.toml
crates/busyncr-daemon/src/: config.rs  identity.rs  lib.rs  main.rs  service.rs  store.rs
crates/busyncr-daemon/tests/: fr5_retention.rs  frm1_status_and_prune_mode.rs  grpc_roundtrip.rs
crates/busyncr-proto/: Cargo.toml  build.rs
crates/busyncr-proto/src/: lib.rs
docs/: CHANGELOG.md  CODING_STANDARDS.md  FR-M1.md  PRD.md  REQUIREMENTS.md  ROADMAP.md
docs/adr/: 0001-blake3-chunk-identity.md  README.md
docs/waycharting/: README.md
docs/waycharting/daemon-service-and-live-monitor/: map.md
docs/waycharting/daemon-service-and-live-monitor/issues/: 01-admin-channel-live-daemon.md  02-service-mechanics-win-macos-linux.md  03-monitor-data-model-per-client.md  04-quota-setting-frq1-pull-forward.md  05-store-relocation.md  06-monitor-interface-mock.md  07-assemble-spec-and-slice-dag.md
docs/waycharting/packed-store-layout/: 2026-07-11-documents-bench.md  notes.md
issues/: 00001-bench-json-history-and-save-path.md  00002-bench-extended-analysis.md  00003-bench-sub-256k-candidates.md  00004-bench-concrete-report-redesign.md  00005-bench-montecarlo-compression.md  00006-bench-progress-and-timing.md  README.md  TEMPLATE.md
proto/: busyncr.proto
