[package]
name = "busyncr-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "busyncr-client"
path = "src/main.rs"

[dependencies]
anyhow = "1"
busyncr-core.workspace = true
busyncr-proto.workspace = true
clap = { version = "4", features = ["derive"] }
# filetime is in the AGENTS.md ask-free palette; restore (S8) uses it to set
# a restored file's mtime cross-platform (Unix + Windows) without hand-rolled
# platform code beyond permission bits.
filetime = "0.2"
rand = "0.10.2"
# default aws_lc_rs backend matches tonic's tls-aws-lc.
rcgen = "0.14"
serde = { version = "1", features = ["derive"] }
# serde_json is not named in the AGENTS.md ask-free palette, but PRD §3.7
# mandates `--json` machine-readable output; it is the serde-family JSON
# serializer (serde itself is in the palette).
serde_json = "1"
# thiserror is not in the AGENTS.md ask-free palette by name, but the palette's
# error-handling rule mandates "thiserror enums in core/library crates".
thiserror = "2.0.18"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
# tokio-stream is not named in the palette; it is the tokio project's own
# companion crate (same org/release train as the palette's `tokio`) and is
# required to adapt an in-memory blob batch into the `Stream` tonic's
# client-streaming UploadChunks RPC consumes (same justification as in
# busyncr-daemon).
tokio-stream = "0.1"
toml = "0.9"
tonic = { workspace = true, features = ["tls-aws-lc"] }
ulid = "1.2"

[dev-dependencies]
blake3 = "1.8.5"
busyncr-daemon = { path = "../busyncr-daemon" }
tempfile = "3"
