[package]
name = "busyncr-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "busyncr-client"
path = "src/main.rs"

[dependencies]
anyhow = "1"
# blake3 is in the AGENTS.md ask-free palette; FR-M1 M3.1's `busyncr-client
# status` fingerprints the enrolled certificate the same way the daemon does
# (BLAKE3 of the DER) so an operator can cross-check the daemon's registry.
blake3 = "1.8.5"
busyncr-core.workspace = true
busyncr-proto.workspace = true
clap = { version = "4", features = ["derive"] }
# filetime is in the AGENTS.md ask-free palette; restore (S8) uses it to set
# a restored file's mtime cross-platform (Unix + Windows) without hand-rolled
# platform code beyond permission bits.
filetime = "0.2"
rand = "0.10.2"
# default aws_lc_rs backend matches tonic's tls-aws-lc.
rcgen = "0.14"
serde = { version = "1", features = ["derive"] }
# serde_json is not named in the AGENTS.md ask-free palette, but PRD §3.7
# mandates `--json` machine-readable output; it is the serde-family JSON
# serializer (serde itself is in the palette).
serde_json = "1"
# thiserror is not in the AGENTS.md ask-free palette by name, but the palette's
# error-handling rule mandates "thiserror enums in core/library crates".
thiserror = "2.0.18"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
# tokio-stream is not named in the palette; it is the tokio project's own
# companion crate (same org/release train as the palette's `tokio`) and is
# required to adapt an in-memory blob batch into the `Stream` tonic's
# client-streaming UploadChunks RPC consumes (same justification as in
# busyncr-daemon).
tokio-stream = "0.1"
toml = "0.9"
tonic = { workspace = true, features = ["tls-aws-lc"] }
ulid = "1.2"

# S11 (FR8 Windows part, PRD §3.6): Windows service install/start/stop/run,
# only ever compiled for windows targets — a Linux build never pulls these
# crates into its dependency graph at all.
[target.'cfg(windows)'.dependencies]
# windows-service is in the AGENTS.md ask-free palette ("windows-service (cfg
# windows)") for exactly this purpose.
windows-service = "0.8"
# windows-sys is not named in the palette, but windows-service itself depends
# on it (same version pinned here, so this adds no new crate to the dependency
# *tree*, only a direct Cargo.toml line). It is needed because windows-service
# wraps SCM install/start/stop/dispatch but not the Win32 Event Log APIs the
# PRD's "event-log logging" requirement calls for; RegisterEventSourceW /
# ReportEventW / DeregisterEventSource (advapi32) are called directly in
# `service::eventlog`. `std::os::windows::ffi::OsStrExt` (std) covers the
# UTF-16 conversion, so no wide-string crate is needed either.
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_EventLog",
] }

[dev-dependencies]
busyncr-daemon = { path = "../busyncr-daemon" }
tempfile = "3"
