[package]
name = "busyncr-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "busyncr-daemon"
path = "src/main.rs"

[lib]
name = "busyncr_daemon"
path = "src/lib.rs"

[dependencies]
busyncr-core.workspace = true
busyncr-proto.workspace = true
redb = "4.1"
# thiserror is not in the AGENTS.md ask-free palette by name, but the palette's
# error-handling rule mandates "thiserror enums in core/library crates".
thiserror = "2.0.18"
ulid = "1.2"
tonic = { workspace = true, features = ["tls-aws-lc"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }
# x509-parser feature: required to parse the client's PKCS#10 CSR during
# enrollment (FR1); default aws_lc_rs backend matches tonic's tls-aws-lc.
rcgen = { version = "0.14", features = ["x509-parser"] }
blake3 = "1.8.5"
rand = "0.10.2"
serde = { version = "1", features = ["derive"] }
# serde_json is not named in the AGENTS.md ask-free palette, but FR-M1 M3.3
# mandates `--json` on `busyncr-daemon status` (same justification as
# busyncr-client's existing `--json` support: serde_json is the serde-family
# JSON serializer, and serde itself is in the palette).
serde_json = "1"
toml = "0.9"
# tokio-stream is not named in the palette; it is the tokio project's own
# companion crate (same org/release train as the palette's `tokio`) and is
# required to adapt tokio primitives (mpsc receivers, TcpListener) into the
# `Stream`s tonic's streaming RPCs and `serve_with_incoming` consume.
tokio-stream = { version = "0.1", features = ["net"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
